Fix vertical font spacing

--- a/src/Common/Components/Navigation/NavigationItem.razor.css
+++ b/src/Common/Components/Navigation/NavigationItem.razor.css
@@ -56,6 +56,7 @@
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
+    line-height: normal
 }
 
 
@@ -71,7 +72,6 @@
         height: 3rem;
         display: flex;
         align-items: center;
-        line-height: 3rem;
         width: 100%;
     }
 
